--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "9.107.0",
     "@react-three/fiber": "8.16.8",
     "@reduxjs/toolkit": "^2.2.7",
+    "@simplepdf/react-embed-pdf": "^1.8.0",
     "@sinm/react-chrome-tabs": "^2.3.3",
     "@tweenjs/tween.js": "23.1.2",
     "@types/react-grid-layout": "^1.3.5",
