fix: resolve dependencies blocking GitHub repository indicator load

--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@types/redux": "^3.6.0",
     "@types/swiper": "^6.0.0",
     "@types/three": "^0.167.1",
-    "@uiw/react-github-corners": "^1.5.16",
     "emailjs-com": "^3.2.0",
     "es-abstract": "^1.23.3",
     "formik": "^2.4.6",
@@ -34,6 +33,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-draggable": "4.4.6",
+    "react-github-corner": "^2.5.0",
     "react-grid-layout": "^1.4.4",
     "react-i18next": "^13.3.1",
     "react-minimap": "^0.7.4",
